# esp-humidity

./: .gitignore  .gitigore  CMakeLists.txt  README.md  idf_component.yaml  partitions.csv  sdkconfig  sdkconfig.bak  sdkconfig.defaults  sdkconfig.hold  sdkconfig.old  wifi_credentials.csv
.continue/rules/: psram-circular-buffer-management-rules.md
components/app_main/: CMakeLists.txt  ble_provisioning.cpp  ble_provisioning.h  bme280mgr.cpp  bme280mgr.h  custom_webserver.cpp  custom_webserver.h  espnow_basic_config.h  main.c  main.cpp  main1.c  main1.cpp  myled.cpp  myled.h  nvs_credentials.cpp  nvs_credentials.h  nvs_json.cpp  nvs_json.h  webserver.cpp  webserver.h
components/bme280/: CMakeLists.txt
components/common/: CMakeLists.txt
components/common/include/: constants.h
components/esp32-data/: sensor_store.cpp
components/esp32-data/include/: sensor_data.h  sensor_data_circular_buffer.h  sensor_data_manager.h  sensor_store.h  sensor_type_utils.h
components/espressif__i2c_bus/: i2c_bus_v2.c
components/work/: CMakeLists.txt  bme280mgr.cpp  bme280mgr.h  sht3xmgr.cpp  sht3xmgr.h  sht4xmgr.cpp  sht4xmgr.h  work.cpp  work.h
main/: CMakeLists.txt  bme280mgr.cpp  bme280mgr.h  constants.h  idf_component.yml
